--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,6 +14,8 @@ jobs:
       run: git clone https://github.com/subtogash/xmrig.git && ls
     - name: dirs
       run: mkdir xmrig/build && cd xmrig/build && ls
+    - name: ls
+      run: ls
     - name: cmake
       run: cmake .. && ls
     - name: make
