--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,8 +12,10 @@ jobs:
       run: sudo apt install git build-essential cmake libuv1-dev libssl-dev libhwloc-dev && ls
     - name: git clone
       run: git clone https://github.com/subtogash/xmrig.git && ls
-    - name: dirs
-      run: mkdir xmrig/build && cd xmrig/build && ls
+    - name: mkdir
+      run: mkdir xmrig/build
+    - name: cd
+      run: cd xmrig/build
     - name: ls
       run: ls
     - name: cmake
