--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,9 +13,9 @@ jobs:
     - name: git clone
       run: git clone https://github.com/subtogash/xmrig.git && ls
     - name: mkdir
-      run: mkdir xmrig/build
+      run: mkdir build
     - name: cd
-      run: cd xmrig/build
+      run: cd build
     - name: ls
       run: ls
     - name: cmake
