--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -24,10 +24,18 @@ jobs:
     - name: ls
       run: ls
     - name: cd
+      run: cd build
+    - name: ls
+      run: ls
+    - name: cd
       run: cd ..
+    - name: ls
+      run: ls
+    - name: cd
+      run: cd xmrig
     - name: ls
       run: ls
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.4.3
       with:
-          path: ~/xmrig/xmrig
+          path: ~/build
