--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -6,36 +6,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
-    - name: depend
-      run: sudo apt install git build-essential cmake libuv1-dev libssl-dev libhwloc-dev && ls
-    - name: mkdir
-      run: mkdir build
-    - name: cd
-      run: cd build
-    - name: cmake
-      run: cmake .
-    - name: make
-      run: make -j$(nproc)
-    - name: cd
-      run: cd ..
-    - name: ls
-      run: ls
-    - name: cd
-      run: cd build
-    - name: ls
-      run: ls
-    - name: cd
-      run: cd ..
-    - name: ls
-      run: ls
-    - name: cd
-      run: cd xmrig
-    - name: ls
-      run: ls
+    - run: mkdir build && cd build
+    - run: cmake .. -G "Visual Studio 17 2022" -A x64 -DXMRIG_DEPS=c:\xmrig-deps\msvc2019\x64
+    - run: cmake --build . --config Release
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.4.3
       with:
-          path: ~/build
+          path: build/
